creando un listador

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+  <div>
+   <form id="todo-form">
+      <input type="text" id="todo"/>
+      <input type="submit" value="Enviar"/>
+   </form>
+<ul id="todo-list">
+  
+</ul>
+  </div>
+  
 </body>
+<script defer type="text/javascript" src="/main.js"></script>
 </html>
